[project]
name = "post-reach-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "amqp==5.3.1",
    "asgiref==3.8.1",
    "billiard==4.2.1",
    "boto3==1.37.32",
    "cachetools==5.5.2",
    "celery==5.5.2",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "cfgv==3.4.0",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "cron-descriptor==1.4.5",
    "cryptography==44.0.2",
    "distlib==0.3.9",
    "django==5.2",
    "django-celery-beat==2.8.1",
    "django-celery-results==2.6.0",
    "django-cors-headers==4.7.0",
    "django-environ==0.12.0",
    "django-querycount==0.8.3",
    "django-timezone-field==7.1",
    "djangorestframework==3.16.0",
    "djangorestframework-simplejwt==5.5.0",
    "drf-yasg==1.21.10",
    "filelock==3.18.0",
    "google-api-core==2.24.2",
    "google-api-python-client==2.169.0",
    "google-auth==2.39.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.2",
    "googleapis-common-protos==1.70.0",
    "gunicorn>=26.0.0",
    "httplib2==0.22.0",
    "httpx==0.28.1",
    "identify==2.6.10",
    "idna==3.10",
    "inflection==0.5.1",
    "kombu==5.5.3",
    "nodeenv==1.9.1",
    "oauthlib==3.2.2",
    "packaging==25.0",
    "platformdirs==4.3.7",
    "pre-commit==4.2.0",
    "prompt-toolkit==3.0.51",
    "proto-plus==1.26.1",
    "protobuf==6.30.2",
    "psycopg2>=2.9.12",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.22",
    "pyjwt==2.9.0",
    "pyparsing==3.2.3",
    "pytest==8.3.5",
    "pytest-django==4.11.1",
    "pytest-mock==3.14.0",
    "python-crontab==3.2.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "redis==6.1.0",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "rsa==4.9.1",
    "six==1.17.0",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
    "uritemplate==4.1.1",
    "urllib3==2.4.0",
    "vine==5.1.0",
    "virtualenv==20.30.0",
    "wcwidth==0.2.13",
    "whitenoise>=6.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "post_reach_backend.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["users", "social_accounts", "utils"]
